package eapli.base.domain.persistence;

import eapli.base.domain.model.AGV;
import org.springframework.data.jpa.repository.JpaRepository;

public interface AGVRepository extends JpaRepository<AGV, Long> {


}